@@ -20,6 +20,7 @@ package io.github.mzmine.datamodel.features;
 
 import com.google.common.collect.Range;
 import io.github.mzmine.datamodel.DataPoint;
+import io.github.mzmine.datamodel.FeatureInformation;
 import io.github.mzmine.datamodel.FeatureStatus;
 import io.github.mzmine.datamodel.IsotopePattern;
 import io.github.mzmine.datamodel.MassSpectrum;
@@ -53,24 +54,21 @@ import io.github.mzmine.datamodel.features.types.numbers.RTRangeType;
 import io.github.mzmine.datamodel.features.types.numbers.RTType;
 import io.github.mzmine.datamodel.features.types.numbers.TailingFactorType;
 import io.github.mzmine.datamodel.impl.SimpleDataPoint;
-import io.github.mzmine.datamodel.impl.SimpleFeatureInformation;
 import io.github.mzmine.modules.tools.qualityparameters.QualityParameters;
 import io.github.mzmine.util.DataPointUtils;
+import io.github.mzmine.util.FeatureUtils;
 import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
-import javafx.beans.property.ListProperty;
-import javafx.beans.property.ObjectProperty;
-import javafx.beans.property.Property;
 import javafx.collections.FXCollections;
 import javafx.collections.MapChangeListener;
-import javafx.collections.ObservableList;
 import javafx.collections.ObservableMap;
 import javafx.scene.Node;
+import javafx.scene.layout.Pane;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -81,32 +79,26 @@ import org.jetbrains.annotations.Nullable;
  */
 public class ModularFeature implements Feature, ModularDataModel {
 
-  private final ObservableMap<DataType, Property<?>> map = FXCollections
-      .observableMap(new HashMap<>());
+  private final ObservableMap<DataType, Object> map = FXCollections.observableMap(new HashMap<>());
   // buffert col charts and nodes
   private final Map<String, Node> buffertColCharts = new HashMap<>();
   @NotNull
   private ModularFeatureList flist;
 
+  private FeatureListRow parentRow;
+
   public ModularFeature(@NotNull ModularFeatureList flist) {
     this.flist = flist;
-
-    // add type property columns to maps
-    flist.getFeatureTypes().values().forEach(type -> {
-      this.setProperty(type, type.createProperty());
-    });
 
     // register listener to types map to automatically generate default properties for new DataTypes
     flist.getFeatureTypes().addListener(
         (MapChangeListener<? super Class<? extends DataType>, ? super DataType>) change -> {
           if (change.wasAdded()) {
-            // add type columns to maps
-            DataType type = change.getValueAdded();
-            this.setProperty(type, type.createProperty());
+            // do nothing for now
           } else if (change.wasRemoved()) {
             // remove type columns to maps
-            DataType<Property<?>> type = change.getValueRemoved();
-            this.removeProperty((Class<DataType<Property<?>>>) type.getClass());
+            DataType type = change.getValueRemoved();
+            this.remove((Class) type.getClass());
           }
         });
   }
@@ -158,7 +150,7 @@ public class ModularFeature implements Feature, ModularDataModel {
     setFragmentScan(fragmentScanNumber);
     setRepresentativeScan(representativeScan);
     // add values to feature
-//    set(ScanNumbersType.class, List.of(scanNumbers));
+    //    set(ScanNumbersType.class, List.of(scanNumbers));
     set(RawFileType.class, dataFile);
     set(DetectionType.class, featureStatus);
     set(MZType.class, mz);
@@ -168,7 +160,7 @@ public class ModularFeature implements Feature, ModularDataModel {
     set(BestScanNumberType.class, representativeScan);
 
     // datapoints of feature
-//    set(DataPointsType.class, Arrays.asList(dataPointsPerScan));
+    //    set(DataPointsType.class, Arrays.asList(dataPointsPerScan));
     SimpleIonTimeSeries featureData = new SimpleIonTimeSeries(flist.getMemoryMapStorage(), mzs,
         intensities, scans);
     set(FeatureDataType.class, featureData);
@@ -215,13 +207,6 @@ public class ModularFeature implements Feature, ModularDataModel {
   }
 
   /**
-   * Copy constructor
-   */
-//  public ModularFeature(@NotNull Feature f) {
-//    this((ModularFeatureList) Objects.requireNonNull(f.getFeatureList()), f);
-//  }
-
-  /**
    * Copy constructor with custom feature list
    */
   public ModularFeature(@NotNull ModularFeatureList flist, Feature f) {
@@ -230,7 +215,7 @@ public class ModularFeature implements Feature, ModularDataModel {
       ((ModularFeature) f).stream().forEach(entry -> this.set(entry.getKey(), entry.getValue()));
     } else {
       // add values to feature
-//      set(ScanNumbersType.class, f.getScanNumbers());
+      //      set(ScanNumbersType.class, f.getScanNumbers());
       set(RawFileType.class, (f.getRawDataFile()));
       set(DetectionType.class, (f.getFeatureStatus()));
       set(MZType.class, (f.getMZ()));
@@ -242,15 +227,15 @@ public class ModularFeature implements Feature, ModularDataModel {
       set(FragmentScanNumbersType.class, (f.getAllMS2FragmentScans()));
 
       // datapoints of feature
-//      set(DataPointsType.class, f.getDataPoints());
-//      if(f instanceof ModularFeature) {
-//        set(FeatureDataType.class, ((ModularFeature)f).getFeatureData());
-//      } else {
+      //      set(DataPointsType.class, f.getDataPoints());
+      //      if(f instanceof ModularFeature) {
+      //        set(FeatureDataType.class, ((ModularFeature)f).getFeatureData());
+      //      } else {
       double[][] dp = DataPointUtils.getDataPointsAsDoubleArray(f.getDataPoints());
       SimpleIonTimeSeries featureData = new SimpleIonTimeSeries(flist.getMemoryMapStorage(), dp[0],
           dp[1], f.getScanNumbers());
       set(FeatureDataType.class, featureData);
-//      }
+      //      }
 
       // ranges
       set(MZRangeType.class, f.getRawDataPointsMZRange());
@@ -281,24 +266,40 @@ public class ModularFeature implements Feature, ModularDataModel {
     buffertColCharts.put(colname, node);
   }
 
+  public void clearBufferedColCharts() {
+    buffertColCharts.forEach((k, v) -> {
+      if (v instanceof Pane p && p.getParent() instanceof Pane pane) {
+        // remove the node from the parent so there is no more reference and it can be GC'ed
+        pane.getChildren().remove(v);
+      }
+    });
+    buffertColCharts.clear();
+  }
+
   @Override
-  public <T extends Property<?>> void set(Class<? extends DataType<T>> tclass, Object value) {
+  public <T> boolean set(Class<? extends DataType<T>> tclass, T value) {
     // type in defined columns?
     if (!getTypes().containsKey(tclass)) {
       try {
         DataType newType = tclass.getConstructor().newInstance();
         ModularFeatureList flist = (ModularFeatureList) getFeatureList();
         flist.addFeatureType(newType);
-        setProperty(newType, newType.createProperty());
       } catch (NullPointerException | InstantiationException | NoSuchMethodException | InvocationTargetException | IllegalAccessException e) {
         e.printStackTrace();
-        return;
+        return false;
       }
     }
     // access default method
-    ModularDataModel.super.set(tclass, value);
+    return ModularDataModel.super.set(tclass, value);
   }
 
+  /**
+   * Maps listeners to their {@link DataType}s. Default returns an empty list.
+   */
+  @Override
+  public @NotNull Map<DataType<?>, List<DataTypeValueChangeListener<?>>> getValueChangeListeners() {
+    return getFeatureList().getFeatureTypeChangeListeners();
+  }
 
   @Override
   public ObservableMap<Class<? extends DataType>, DataType> getTypes() {
@@ -307,7 +308,7 @@ public class ModularFeature implements Feature, ModularDataModel {
 
   // todo make this private?
   @Override
-  public ObservableMap<DataType, Property<?>> getMap() {
+  public ObservableMap<DataType, Object> getMap() {
     return map;
   }
 
@@ -334,28 +335,27 @@ public class ModularFeature implements Feature, ModularDataModel {
   @NotNull
   @Override
   public Range<Float> getRawDataPointsRTRange() {
-    ObjectProperty<Range<Float>> v = get(RTRangeType.class);
-    return v == null || v.getValue() == null ? Range.singleton(0f) : v.getValue();
+    Range<Float> v = get(RTRangeType.class);
+    return v == null ? Range.singleton(0f) : v;
   }
 
   @NotNull
   @Override
   public Range<Double> getRawDataPointsMZRange() {
-    ObjectProperty<Range<Double>> v = get(MZRangeType.class);
-    return v == null || v.getValue() == null ? Range.singleton(0d) : v.getValue();
+    Range<Double> v = get(MZRangeType.class);
+    return v == null ? Range.singleton(0d) : v;
   }
 
   @NotNull
   @Override
   public Range<Float> getRawDataPointsIntensityRange() {
-    ObjectProperty<Range<Float>> v = get(IntensityRangeType.class);
-    return v == null || v.getValue() == null ? Range.singleton(0f) : v.getValue();
+    Range<Float> v = get(IntensityRangeType.class);
+    return v == null ? Range.singleton(0f) : v;
   }
 
   @Override
   public Scan getMostIntenseFragmentScan() {
-    Property<Scan> v = get(BestFragmentScanNumberType.class);
-    return v == null || v.getValue() == null ? null : v.getValue();
+    return get(BestFragmentScanNumberType.class);
   }
 
   @Override
@@ -364,22 +364,20 @@ public class ModularFeature implements Feature, ModularDataModel {
   }
 
   @Override
-  public ObservableList<Scan> getAllMS2FragmentScans() {
-    ListProperty<Scan> v = get(FragmentScanNumbersType.class);
-    return v == null || v.getValue() == null ? FXCollections
-        .unmodifiableObservableList(FXCollections.emptyObservableList()) : v.getValue();
+  public List<Scan> getAllMS2FragmentScans() {
+    // return empty list instead
+    return Objects.requireNonNullElse(get(FragmentScanNumbersType.class), List.of());
   }
 
   @Override
-  public void setAllMS2FragmentScans(ObservableList<Scan> allMS2FragmentScanNumbers) {
+  public void setAllMS2FragmentScans(List<Scan> allMS2FragmentScanNumbers) {
     set(FragmentScanNumbersType.class, allMS2FragmentScanNumbers);
   }
 
   @Nullable
   @Override
   public IsotopePattern getIsotopePattern() {
-    Property<IsotopePattern> v = get(IsotopePatternType.class);
-    return v == null ? null : v.getValue();
+    return get(IsotopePatternType.class);
   }
 
   @Override
@@ -389,8 +387,8 @@ public class ModularFeature implements Feature, ModularDataModel {
 
   @Override
   public Integer getCharge() {
-    Property<Integer> charge = get(ChargeType.class);
-    return charge == null || charge.getValue() == null ? 0 : charge.getValue();
+    Integer charge = get(ChargeType.class);
+    return charge == null ? 0 : charge;
   }
 
   @Override
@@ -400,8 +398,7 @@ public class ModularFeature implements Feature, ModularDataModel {
 
   @Override
   public Float getFWHM() {
-    Property<Float> v = get(FwhmType.class);
-    return v == null || v.getValue() == null ? Float.NaN : v.getValue();
+    return get(FwhmType.class);
   }
 
   @Override
@@ -411,8 +408,7 @@ public class ModularFeature implements Feature, ModularDataModel {
 
   @Override
   public Float getTailingFactor() {
-    Property<Float> v = get(TailingFactorType.class);
-    return v == null || v.getValue() == null ? Float.NaN : v.getValue();
+    return get(TailingFactorType.class);
   }
 
   @Override
@@ -422,8 +418,7 @@ public class ModularFeature implements Feature, ModularDataModel {
 
   @Override
   public Float getAsymmetryFactor() {
-    Property<Float> v = get(AsymmetryFactorType.class);
-    return v == null || v.getValue() == null ? Float.NaN : v.getValue();
+    return get(AsymmetryFactorType.class);
   }
 
   @Override
@@ -437,13 +432,12 @@ public class ModularFeature implements Feature, ModularDataModel {
   }
 
   @Override
-  public SimpleFeatureInformation getFeatureInformation() {
-    ObjectProperty<SimpleFeatureInformation> v = get(FeatureInformationType.class);
-    return v == null ? null : v.getValue();
+  public FeatureInformation getFeatureInformation() {
+    return get(FeatureInformationType.class);
   }
 
   @Override
-  public void setFeatureInformation(SimpleFeatureInformation featureInfo) {
+  public void setFeatureInformation(FeatureInformation featureInfo) {
     set(FeatureInformationType.class, featureInfo);
   }
 
@@ -458,35 +452,16 @@ public class ModularFeature implements Feature, ModularDataModel {
     this.flist = (ModularFeatureList) flist;
   }
 
+  @Override
+  public int getNumberOfDataPoints() {
+    final IonTimeSeries<? extends Scan> data = getFeatureData();
+    return data == null ? 0 : data.getNumberOfValues();
+  }
+
   @Nullable
   @Override
   public RawDataFile getRawDataFile() {
-    ObjectProperty<RawDataFile> raw = get(RawFileType.class);
-    return raw == null ? null : raw.getValue();
-  }
-
-  public Property<Float> getRTProperty() {
-    return get(RTType.class);
-  }
-
-  public Property<Double> getMZProperty() {
-    return get(MZType.class);
-  }
-
-  public Property<Float> getHeightProperty() {
-    return get(HeightType.class);
-  }
-
-//  public ListProperty<Scan> getScanNumbersProperty() {
-//    return get(ScanNumbersType.class);
-//  }
-
-//  public ListProperty<DataPoint> getDataPointsProperty() {
-//    return get(DataPointsType.class);
-//  }
-
-  public Property<Float> getAreaProperty() {
-    return get(AreaType.class);
+    return get(RawFileType.class);
   }
 
   /**
@@ -498,13 +473,13 @@ public class ModularFeature implements Feature, ModularDataModel {
   @Override
   public List<Scan> getScanNumbers() {
     IonTimeSeries<? extends Scan> data = getFeatureData();
-    return data == null ? Collections.emptyList() : (List<Scan>) data.getSpectra();
+    return data == null ? List.of() : (List<Scan>) data.getSpectra();
   }
+
 
   @Override
   public Scan getRepresentativeScan() {
-    Property<Scan> v = get(BestScanNumberType.class);
-    return v == null || v.getValue() == null ? null : v.getValue();
+    return get(BestScanNumberType.class);
   }
 
   @Override
@@ -519,25 +494,38 @@ public class ModularFeature implements Feature, ModularDataModel {
    */
   @Override
   @Deprecated
-  public ObservableList<DataPoint> getDataPoints() {
-//    ListProperty<DataPoint> v = get(DataPointsType.class);
-//    return v == null || v.getValue() == null ?
-//        FXCollections.unmodifiableObservableList(FXCollections.emptyObservableList())
-//        : v.getValue();
+  public List<DataPoint> getDataPoints() {
     IonTimeSeries<? extends Scan> data = getFeatureData();
     return data == null ? null
         : FXCollections.observableArrayList(data.stream().collect(Collectors.toList()));
   }
 
+  @Override
+  public @Nullable DataPoint getDataPointAtIndex(int i) {
+    if (i < 0) {
+      return null;
+    }
+    IonTimeSeries<? extends Scan> data = getFeatureData();
+    return data == null || i >= data.getNumberOfValues() ? null
+        : new SimpleDataPoint(data.getMZ(i), data.getIntensity(i));
+  }
+
   public IonTimeSeries<? extends Scan> getFeatureData() {
-    ObjectProperty<IonTimeSeries<? extends Scan>> v = get(FeatureDataType.class);
-    return v == null || v.getValue() == null ? null : v.getValue();
+    return get(FeatureDataType.class);
+  }
+
+  @Override
+  public @Nullable FeatureListRow getRow() {
+    return parentRow;
+  }
+
+  public void setRow(FeatureListRow row) {
+    parentRow = row;
   }
 
   @Override
   public Float getRT() {
-    Property<Float> v = get(RTType.class);
-    return v == null || v.getValue() == null ? Float.NaN : v.getValue();
+    return get(RTType.class);
   }
 
   @Override
@@ -548,14 +536,13 @@ public class ModularFeature implements Feature, ModularDataModel {
   @NotNull
   @Override
   public FeatureStatus getFeatureStatus() {
-    ObjectProperty<FeatureStatus> v = get(DetectionType.class);
-    return v == null || v.getValue() == null ? FeatureStatus.UNKNOWN : v.getValue();
+    FeatureStatus v = get(DetectionType.class);
+    return v == null ? FeatureStatus.UNKNOWN : v;
   }
 
   @Override
   public Double getMZ() {
-    Property<Double> mz = get(MZType.class);
-    return mz == null || mz.getValue() == null ? Double.NaN : mz.getValue();
+    return get(MZType.class);
   }
 
   @Override
@@ -564,8 +551,7 @@ public class ModularFeature implements Feature, ModularDataModel {
   }
 
   public Float getHeight() {
-    Property<Float> v = get(HeightType.class);
-    return v == null || v.getValue() == null ? Float.NaN : v.getValue();
+    return get(HeightType.class);
   }
 
   @Override
@@ -574,8 +560,7 @@ public class ModularFeature implements Feature, ModularDataModel {
   }
 
   public Float getArea() {
-    Property<Float> v = get(AreaType.class);
-    return v == null || v.getValue() == null ? Float.NaN : v.getValue();
+    return get(AreaType.class);
   }
 
   @Override
@@ -586,8 +571,7 @@ public class ModularFeature implements Feature, ModularDataModel {
   @Nullable
   @Override
   public Float getMobility() {
-    Property<Float> v = get(io.github.mzmine.datamodel.features.types.numbers.MobilityType.class);
-    return v == null || v.getValue() == null ? null : v.getValue();
+    return get(io.github.mzmine.datamodel.features.types.numbers.MobilityType.class);
   }
 
   @Override
@@ -598,8 +582,7 @@ public class ModularFeature implements Feature, ModularDataModel {
   @Nullable
   @Override
   public MobilityType getMobilityUnit() {
-    Property<MobilityType> v = get(MobilityUnitType.class);
-    return v == null || v.getValue() == null ? null : v.getValue();
+    return get(MobilityUnitType.class);
   }
 
   @Override
@@ -609,8 +592,7 @@ public class ModularFeature implements Feature, ModularDataModel {
 
   @Override
   public Float getCCS() {
-    Property<Float> v = get(CCSType.class);
-    return v == null || v.getValue() == null ? null : v.getValue();
+    return get(CCSType.class);
   }
 
   @Override
@@ -621,12 +603,16 @@ public class ModularFeature implements Feature, ModularDataModel {
   @Nullable
   @Override
   public Range<Float> getMobilityRange() {
-    ObjectProperty<Range<Float>> v = get(MobilityRangeType.class);
-    return v == null || v.getValue() == null ? null : v.getValue();
+    return get(MobilityRangeType.class);
   }
 
   @Override
   public void setMobilityRange(Range<Float> range) {
     set(MobilityRangeType.class, range);
+  }
+
+  @Override
+  public String toString() {
+    return FeatureUtils.featureToString(this);
   }
 }
